--- a/lm-simulator/lm_simulator/fake_binaries/olicense/olixtool.out.tmpl
+++ b/lm-simulator/lm_simulator/fake_binaries/olicense/olixtool.out.tmpl
@@ -5,6 +5,7 @@ Server: <127.0.0.1:31212:0> (Proxy: <>)
 
 List of requested licenses:
 
+{% for feature in licenses %}
 ==============================================
 Application:	cosin
 VersionRange:	0-20231
@@ -14,10 +15,11 @@ License-ID:	cosin@123
 Modules:
   Name; LicenseType; FloatCount; Expiration
   --------------------------------------------
-  {{license_name}};         	FreeFloating;	{{total_licenses}};	2022-12-31 23:59:59;	
-    {% if any_in_use %}  
-    {{in_use}} FloatsLockedBy:
-      {% for license_in_use in licenses_in_use %}
+  {{feature.license_name}};         	FreeFloating;	{{feature.total_licenses}};	2022-12-31 23:59:59;	
+    {% if feature.any_in_use %}  
+    {{feature.in_use}} FloatsLockedBy:
+      {% for license_in_use in feature.licenses_in_use %}
       {{license_in_use.user_name}}@{{license_in_use.lead_host}} #{{license_in_use.quantity}}
       {% endfor %}
   {% endif %}
+  {% endfor %}
